--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous" />
-
+  <link rel="stylesheet" href="assets/css/dqgss.css" />
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -22,7 +22,71 @@
 
 <body>
   <div class="banner">
+    <video autoplay muted loop id="banner_video">
+      <source src="assets/video/bannerbg.mp4" type="video/mp4">
+    </video>
+    <div class="banner-content">
 
+      <div class="container">
+        <div class="row banner-row">
+          <div class="col-6 text-center">
+            <div class='banner-left p-4'>
+              <div class="banner-logo">
+                <img src="assets/image/logo.png" />
+              </div>
+
+              <div class="my-3">
+
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="banner-slider text-white">
+
+
+              <div id="bannderSlider" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="banner-slider-slide">
+                      <h3>In <span>Dqube</span>, we turn your imagination into Trendy designs.</h3>
+                      <p>In this internet world, you have only a moment to create an impact on your visiting audience,
+                        so
+                        make
+                        a
+                        good impression by cool and user – friendly website</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="banner-slider-slide">
+                      <h3>Determined</h3>
+                      <p>For excellence since our inception, we at Dqube trust in “INNOVATION” at every step.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="banner-slider-slide">
+
+                      <p>We at Dqube, create your own website, not just a website but a user-friendly, responsive
+                        website. Our focus is to create and maintain great looking websites which drive great profit
+                        for your business</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="banner-slider-slide">
+                      <h3>What We Do</h3>
+                      <p>We build brands - educate, engage, and inspire customers through effective online services.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
