Animated Icons Update

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   <span class="text">Web App</span>
                 </a>
                 <a class="services-button">
-                  <img src="assets/image/website.gif" />
+                  <img src="assets/image/mobileapp.gif" />
                   <span class="text">Mobile App</span>
                 </a>
                 <a class="services-button">
@@ -125,7 +125,7 @@
                   <span class="text">Design</span>
                 </a>
                 <a class="services-button d-none d-xxl-inline-block">
-                  <img src="assets/image/website.gif" />
+                  <img src="assets/image/webservice.gif" />
                   <span class="text">Web Services</span>
                 </a>
               </div>
