--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
 
+  <script src="assets/js/jquery.scrollstop.min.js"></script>
   <script src="assets/js/dqgss.js"></script>
 
 </head>
@@ -60,13 +61,13 @@
               <div class="my-3">
 
               </div>
+              <a class="banner-footer-goto d-none"><i class="fas fa-chevron-down fa-2x"></i></a>
             </div>
           </div>
-          <div class="col-7 col-xxl-6">
+          <div class="col-7 col-xxl-6 px-0">
             <div class="banner-slider text-white">
 
-
-              <div id="bannderSlider" class="carousel slide" data-ride="carousel">
+              <!-- <div id="bannderSlider" class="carousel slide d-none" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-interval="8000">
                     <div class="banner-slider-slide">
@@ -104,29 +105,64 @@
                     </div>
                   </div>
                 </div>
+              </div> -->
+
+              <div class="banner-slider-slide">
+
+
+                <h3 class="title mb-0">
+                  <div>Need to scale your business?</div>
+                  <div class="mt-2 small">We're with you every step of the way</div>
+
+                </h3>
+
+                <p class="d-block mb-4 py-2 inner">We develop not only softwares but create great value to your
+                  business through digital
+                  technologies.</p>
+
+
+                <button class="banner-button call-to-action ml-3">
+                  <i class="fas fa-envelope"></i>
+                  Drop your Requirement
+                </button>
               </div>
-
-
-              <div class="banner-services">
-                <a class="services-button">
+              <div class="banner-services d-none">
+                <!-- <a class="services-button">
                   <img src="assets/image/website.gif" />
-                  <span class="text">Website</span>
-                </a>
+                  <span class="text">Web Solutions</span>
+                </a> -->
                 <a class="services-button">
-                  <img src="assets/image/webapp.gif" />
-                  <span class="text">Web App</span>
+                  <img src="assets/image/webservice.gif" />
+                  <span class="text">Web
+                    <div>
+                      Solutions
+                    </div>
+                  </span>
                 </a>
                 <a class="services-button">
                   <img src="assets/image/mobileapp.gif" />
-                  <span class="text">Mobile App</span>
+                  <span class="text">Mobile <div>
+                      Solutions
+                    </div>
+
+                  </span>
                 </a>
                 <a class="services-button">
-                  <img src="assets/image/design.gif" />
-                  <span class="text">Design</span>
+                  <img src="assets/image/enterprise.gif" />
+                  <span class="text">Enterprise
+
+                    <div>
+                      Solutions
+                    </div>
+                  </span>
                 </a>
-                <a class="services-button d-none d-xxl-inline-block">
-                  <img src="assets/image/webservice.gif" />
-                  <span class="text">Web Services</span>
+                <a class="services-button">
+                  <img src="assets/image/customsoftware.gif" />
+                  <span class="text">Product <div>
+                      Engineering
+                    </div>
+
+                  </span>
                 </a>
               </div>
 
@@ -138,10 +174,107 @@
 
     </div>
 
-    <a class="banner-footer-goto d-none"><i class="fas fa-chevron-down fa-2x"></i></a>
+    <div class="banner-footer">
+
+      <div class="container">
+
+        <div class="bg-white px-4 pt-0 pb-4 shadow">
+            <h4 class="text-center mb-0">
+                <span class="title d-inline-block text-white shadow-sm">
+                  Our Satisfied Customers
+                </span>
+      
+              </h4>
+          <div class="row">
+            <div class="col">
+              <img class="customer-logo" src="assets/image/customer_logos/technospeed.png" />
+            </div>
+            <div class="col">
+              <img class="customer-logo" src="assets/image/customer_logos/amazongroup.png" />
+            </div>
+            <div class="col">
+              <img class="customer-logo" src="assets/image/customer_logos/popstreet.PNG" />
+            </div>
+            <div class="col">
+              <img class="customer-logo" src="assets/image/customer_logos/nationaltravels.png" />
+            </div>
+            <div class="col">
+                <img class="customer-logo" src="assets/image/customer_logos/pma.png" />
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <main>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">
+        <img src="assets/image/logo_plain.svg" width="30" height="30" alt="">
+        <span class="navbar-brand-text">
+          DQUBE Global
+        </span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link px-3 px-xxl-4" href="index.html">
+              <i class="fas fa-home mr-1"></i>
+              Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3 px-xxl-4" href="blog.html">
+              <i class="fas fa-blog mr-1"></i>
+              Blog</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link px-3 px-xxl-4" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-cogs mr-1"></i>
+              Services
+            </a>
+            <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Web Solutions</a>
+              <a class="dropdown-item" href="#">Mobile Solutions</a>
+              <a class="dropdown-item" href="#">Enterprise Solutions</a>
+              <a class="dropdown-item" href="#">Product Engineering</a>
+            </div>
+          </li>
+
+
+          <li class="nav-item dropdown">
+            <a class="nav-link px-3 px-xxl-4" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-building mr-1"></i>
+              Company
+
+            </a>
+            <div class="dropdown-menu shadow" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">About us</a>
+              <a class="dropdown-item" href="#">Birth of DQUBE</a>
+              <a class="dropdown-item" href="#">Life at DQUBE</a>
+            </div>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link px-3 px-xxl-4" href="contect.html">
+              <i class="fas fa-comment-alt mr-1"></i>
+              Contact</a>
+          </li>
+
+        </ul>
+        <form class="form-inline my-2 my-lg-0 d-none">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
     <div class="container">
       Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
       <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something <br />Something
