--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </video> -->
       <div class="container-fluid">
         <div class="row banner-row">
-          <div class="col-5 col-xxl-6 p-0 text-center">
+          <div class="col-6 col-xxl-6 p-0 text-center">
             <div class='banner-left p-4'>
               <div class="banner-logo">
                 <img src="assets/image/logo.jpg" />
@@ -64,7 +64,7 @@
               <a class="banner-footer-goto d-none"><i class="fas fa-chevron-down fa-2x"></i></a>
             </div>
           </div>
-          <div class="col-7 col-xxl-6 px-0">
+          <div class="col-6 col-xxl-6 px-0">
             <div class="banner-slider text-white">
 
               <!-- <div id="bannderSlider" class="carousel slide d-none" data-ride="carousel">
@@ -178,29 +178,30 @@
 
       <div class="container">
 
-        <div class="bg-white px-4 pt-0 pb-4 shadow">
-            <h4 class="text-center mb-0">
-                <span class="title d-inline-block text-white shadow-sm">
-                  Our Satisfied Customers
-                </span>
-      
-              </h4>
+        <div class="px-4 pt-0 pb-4">
+          <h4 class="text-center mb-0">
+            <span class="title d-inline-block text-white shadow-sm">
+              Our Satisfied Customers
+            </span>
+
+          </h4>
           <div class="row">
             <div class="col">
-              <img class="customer-logo" src="assets/image/customer_logos/technospeed.png" />
+              <img class="customer-logo" src="assets/image/customer_logos/nationaltravels.png" />
             </div>
             <div class="col">
-              <img class="customer-logo" src="assets/image/customer_logos/amazongroup.png" />
+              <img class="customer-logo" src="assets/image/customer_logos/pma.png" />
             </div>
             <div class="col">
               <img class="customer-logo" src="assets/image/customer_logos/popstreet.PNG" />
             </div>
             <div class="col">
-              <img class="customer-logo" src="assets/image/customer_logos/nationaltravels.png" />
+              <img class="customer-logo" src="assets/image/customer_logos/amazongroup.png" />
             </div>
             <div class="col">
-                <img class="customer-logo" src="assets/image/customer_logos/pma.png" />
-              </div>
+              <img class="customer-logo" src="assets/image/customer_logos/technospeed.png" />
+            </div>
+
           </div>
         </div>
       </div>
