--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <source src="assets/video/bannerbg.mp4" type="video/mp4">
         <source src="assets/video/bannerbg_tech.webm" type="video/webm">
       </video> -->
-      <div class="container py-4">
+      <div class="container container-xxl py-4">
         <img class="mb-5" style="width:300px;" src="assets/image/logo.jpg" />
 
 
