--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <source src="assets/video/bannerbg_tech.webm" type="video/webm">
       </video> -->
       <div class="container container-xxl py-4">
-        <img class="mb-5" style="width:300px;" src="assets/image/logo.jpg" />
+        <img class="mb-5 banner-logo" src="assets/image/logo.jpg" />
 
 
         <div class="banner-text w-75 text-white mt-5 text-shadow">
