--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <source src="assets/video/bannerbg.mp4" type="video/mp4">
         <source src="assets/video/bannerbg_tech.webm" type="video/webm">
       </video> -->
-      <div class="container container-xxl py-4">
+      <div class="container py-4">
         <img class="mb-5 banner-logo" src="assets/image/logo.jpg" />
 
 
@@ -65,7 +65,7 @@
             digital
             technologies.</div>
 
-            <button class="btn btn-danger my-5 shadow">Drop your requirement</button>
+            <button class="btn btn-danger my-4 shadow">Drop your requirement</button>
         </div>
       </div>
     </div>
