--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             digital
             technologies.</div>
 
-            <button class="btn btn-danger my-4 shadow">Drop your requirement</button>
+            <button class="btn btn-danger my-4 shadow d-xxl-none">Drop your requirement</button>
+            <button class="btn btn-danger btn-lg my-4 shadow d-none d-xxl-inline-block">Drop your requirement</button>
         </div>
       </div>
     </div>
