--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
           <div class="col-6 col-md-5">
 
-            <img class="img-fluid" src="/assets/image/mobileappdevelopement.gif" />
+            <img class="img-fluid" src="assets/image/mobileappdevelopement.gif" />
 
           </div>
 
@@ -183,7 +183,7 @@
         <div class="row mb-4">
           <div class="col-6 col-md-5">
 
-            <img class="img-fluid" src="/assets/image/websiteDesign.gif" />
+            <img class="img-fluid" src="assets/image/websiteDesign.gif" />
 
           </div>
           <div class="col-6 col-md-7 align-self-center">
@@ -222,7 +222,7 @@
           </div>
           <div class="col-6 col-md-5">
 
-            <img class="img-fluid" src="/assets/image/EnterpriseApp.gif" />
+            <img class="img-fluid" src="assets/image/EnterpriseApp.gif" />
 
           </div>
         </div>
@@ -239,7 +239,7 @@
         <div class="row">
           <div class="col-6 col-md-5">
 
-            <img class="img-fluid" src="/assets/image/productDev.gif" />
+            <img class="img-fluid" src="assets/image/productDev.gif" />
 
           </div>
           <div class="col-6 col-md-7 align-self-center text-left">
