--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
     <section class="bg-white">
 
-      <div class="container">
+      <div class="container my-5">
 
         <div class="row">
           <div class="col-6 text-right">
@@ -302,7 +302,7 @@
       <div class="container py-4">
         <h2 class="mt-5 mb-5 text-center text-dark">SERVICES</h2>
 
-        <div class="card-group text-center shadow-lg">
+        <div class="card-group text-center shadow-lg mb-5">
           <div class="card">
 
             <div class="card-body">
@@ -400,7 +400,7 @@
 
       <div class="container pb-4">
 
-        <div class="row row-eq-height">
+        <div class="row row-eq-height mb-5">
 
 
           <div class="col-12 col-md-4">
